--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
 		"react-dom": "^18.2.0",
 		"react-icons": "^4.11.0",
 		"react-select": "^5.7.4",
-		"sass": "^1.67.0"
+		"sass": "^1.67.0",
+		"use-sound": "^4.0.1"
 	},
 	"devDependencies": {
 		"@types/react": "^18.2.15",
