--- a/package.json
+++ b/package.json
@@ -1,9 +1,12 @@
 {
 	"name": "soundboard-react",
+	"homepage": "https://Vlaek.github.io/Soundboard-React",
 	"private": true,
 	"version": "0.0.0",
 	"type": "module",
 	"scripts": {
+		"predeploy": "yarn run build",
+		"deploy": "gh-pages -d dist",
 		"dev": "vite",
 		"build": "tsc && vite build",
 		"lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
@@ -31,6 +34,7 @@
 		"eslint": "^8.45.0",
 		"eslint-plugin-react-hooks": "^4.6.0",
 		"eslint-plugin-react-refresh": "^0.4.3",
+		"gh-pages": "^6.0.0",
 		"typescript": "^5.0.2",
 		"vite": "^4.4.5"
 	}
