--- a/package.json
+++ b/package.json
@@ -16,10 +16,12 @@
 		"@types/node": "^20.6.2",
 		"@types/react-select": "^5.0.1",
 		"@types/react-transition-group": "^4.4.6",
+		"axios": "^1.5.0",
 		"classnames": "^2.3.2",
 		"react": "^18.2.0",
 		"react-dom": "^18.2.0",
 		"react-icons": "^4.11.0",
+		"react-loading-skeleton": "^3.3.1",
 		"react-select": "^5.7.4",
 		"react-transition-group": "^4.4.5",
 		"sass": "^1.67.0",
