--- a/package.json
+++ b/package.json
@@ -24,8 +24,7 @@
 		"react-loading-skeleton": "^3.3.1",
 		"react-select": "^5.7.4",
 		"react-transition-group": "^4.4.5",
-		"sass": "^1.67.0",
-		"use-sound": "^4.0.1"
+		"sass": "^1.67.0"
 	},
 	"devDependencies": {
 		"@types/react": "^18.2.15",
