--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
 	},
 	"dependencies": {
 		"@types/node": "^20.6.2",
+		"@types/react-redux": "^7.1.26",
 		"@types/react-select": "^5.0.1",
 		"@types/react-transition-group": "^4.4.6",
 		"axios": "^1.5.0",
@@ -22,8 +23,10 @@
 		"react-dom": "^18.2.0",
 		"react-icons": "^4.11.0",
 		"react-loading-skeleton": "^3.3.1",
+		"react-redux": "^8.1.2",
 		"react-select": "^5.7.4",
 		"react-transition-group": "^4.4.5",
+		"redux": "^4.2.1",
 		"sass": "^1.67.0"
 	},
 	"devDependencies": {
