--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,7 +14,15 @@
 		"resolveJsonModule": true,
 		"isolatedModules": true,
 		"noEmit": true,
-		"jsx": "react-jsx"
+		"jsx": "react-jsx",
+		"baseUrl": "src",
+		"paths": {
+			"API": ["API/*"],
+			"components": ["components/*"],
+			"hooks": ["hooks/*"],
+			"store": ["store/*"],
+			"types": ["types/*"]
+		}
 	},
 	"include": ["src"],
 	"references": [{ "path": "./tsconfig.node.json" }]
