--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
 		"react-icons": "^4.11.0",
 		"react-loading-skeleton": "^3.3.1",
 		"react-redux": "^8.1.2",
+		"react-responsive": "^9.0.2",
 		"react-select": "^5.7.4",
 		"react-transition-group": "^4.4.5",
 		"redux": "^4.2.1",
